--- a/index.html
+++ b/index.html
@@ -123,20 +123,93 @@
                     <p class="fragment fade-in-then-out" style="position:absolute; margin-left: auto; margin-right: auto; left: 0; right: 0;" data-fragment-index="3">
                         <img src="images/gdl_3.png" width="50%" height="50%" style="background:none; border:none; box-shadow:none;">
                     </p>
-                    <div class="fragment fade-in" style="position:absolute; margin-left: auto; margin-right: auto; left: 0; right: 0;" data-fragment-index="4">
+                    <div class="fragment fade-in-then-out" style="position:absolute; margin-left: auto; margin-right: auto; left: 0; right: 0;" data-fragment-index="4">
                         <h4>Criterio de Grübler-Kutzbach</h4>
                         <p>
                             \[\begin{aligned}
-                            F &amp; = \lambda(n-1)-\sum^{j}_{i=1}c_i
+                            F &amp; = \lambda(n-j-1)+\sum^{j}_{i=1}f_i
                             \end{aligned} \]
                         </p>
-                        <p class="fragment fade-in-then-out" style="position:absolute; margin-left: auto; margin-right: auto; left: 0; right: 0;" data-fragment-index="5">
+                        <p class="fragment fade-in-then-out" 
+                           style="position:absolute; margin-left: auto; margin-right: auto; left: 0; right: 0; font-size: 50%;" data-fragment-index="4">
                             \[\begin{aligned}
-                            F &amp; : \text{Grados de libertad} \\ 
+                            F &amp; : \text{Grados de libertad del mecanismo} \\ 
                             \lambda &amp; : \text{Grados de libertad del espacio de trabajo} \\
-                            n &amp; : \text{Numero de vinculos} \\
+                            n &amp; : \text{Numero de vínculos} \\
                             j &amp; : \text{Numero de articulaciones} \\
-                            c_i &amp; : \text{Restricciones de cada articulacion}
+                            f_i &amp; : \text{Libertades de cada articulacion}
+                            \end{aligned} \]
+                        </p>
+                    </div>
+                    <div class="fragment fade-in-then-out" style="position:absolute; margin-left: auto; margin-right: auto; left: 0; right: 0;" data-fragment-index="5">
+                        <h4>Tres miembros con dos grados de libertad</h4>
+                        <p>
+                            \[\begin{aligned}
+                            F &amp; = 6(8 - 9 - 1) + \sum^{6}_{i=1}1 + \sum^{3}_{i=1}3 = 3
+                            \end{aligned} \]
+                        </p>
+                        <p class="fragment fade-in-then-out" 
+                           style="position:absolute; margin-left: auto; margin-right: auto; left: 0; right: 0; font-size: 50%;" data-fragment-index="5">
+                            \[\begin{aligned}
+                            F &amp; : \text{Grados de libertad del mecanismo} \\ 
+                            \lambda &amp; : 6 \\
+                            n &amp; : 2 \text{ vinculos } * 3 \text{ miembros } + 2 \text{ vinculos base } = 8 \\
+                            j &amp; : 9 (j_1= 6 \text{ articulaciones 1gdl; } j_3= 3 \text{ articulaciones 3gdl}) \\
+                            f_i &amp; : 1 \text{ para } j_1 \text{ y } 3 \text{ para } j_3 
+                            \end{aligned} \]
+                        </p>
+                    </div>
+                    <div class="fragment fade-in-then-out" style="position:absolute; margin-left: auto; margin-right: auto; left: 0; right: 0;" data-fragment-index="6">
+                        <h4>Cuatro miembros con dos grados de libertad</h4>
+                        <p>
+                            \[\begin{aligned}
+                            F &amp; = 6(10 - 12 - 1) + \sum^{8}_{i=1}1 + \sum^{4}_{i=1}3 = 2
+                            \end{aligned} \]
+                        </p>
+                        <p class="fragment fade-in-then-out" 
+                           style="position:absolute; margin-left: auto; margin-right: auto; left: 0; right: 0; font-size: 50%;" data-fragment-index="6">
+                            \[\begin{aligned}
+                            F &amp; : \text{Grados de libertad del mecanismo} \\ 
+                            \lambda &amp; : 6 \\
+                            n &amp; : 2 \text{ vinculos } * 4 \text{ miembros } + 2 \text{ vinculos base } = 10 \\
+                            j &amp; : 12 (j_1= 8 \text{ articulaciones 1gdl; } j_3= 4 \text{ articulaciones 3gdl }) \\
+                            f_i &amp; : 1 \text{ para } j_1 \text{ y } 3 \text{ para } j_3 
+                            \end{aligned} \]
+                        </p>
+                    </div>
+                    <div class="fragment fade-in-then-out" style="position:absolute; margin-left: auto; margin-right: auto; left: 0; right: 0;" data-fragment-index="7">
+                        <h4>Tres miembros con tres grados de libertad</h4>
+                        <p>
+                            \[\begin{aligned}
+                            F &amp; = 6(11 - 12 - 1) + \sum^{9}_{i=1}1 + \sum^{3}_{i=1}3 = 6
+                            \end{aligned} \]
+                        </p>
+                        <p class="fragment fade-in-then-out" 
+                           style="position:absolute; margin-left: auto; margin-right: auto; left: 0; right: 0; font-size: 50%;" data-fragment-index="7">
+                            \[\begin{aligned}
+                            F &amp; : \text{Grados de libertad del mecanismo} \\ 
+                            \lambda &amp; : 6 \\
+                            n &amp; : 3 \text{ vinculos } * 3 \text{ miembros } + 2 \text{ vinculos base } = 11 \\
+                            j &amp; : 12 (j_1= 9 \text{ articulaciones 1gdl; } j_3= 3 \text{ articulaciones 3gdl}) \\
+                            f_i &amp; : 1 \text{ para } j_1 \text{ y } 3 \text{ para } j_3 
+                            \end{aligned} \]
+                        </p>
+                    </div>
+                    <div class="fragment fade-in-then-out" style="position:absolute; margin-left: auto; margin-right: auto; left: 0; right: 0;" data-fragment-index="8">
+                        <h4>K miembros con dos grados de libertad</h4>
+                        <p>
+                            \[\begin{aligned}
+                            F &amp; = 6(3k + 2 - 4k - 1) + \sum^{3k}_{i=1}1 + \sum^{k}_{i=1}3 = 6
+                            \end{aligned} \]
+                        </p>
+                        <p class="fragment fade-in-then-out" 
+                           style="position:absolute; margin-left: auto; margin-right: auto; left: 0; right: 0; font-size: 50%;" data-fragment-index="8">
+                            \[\begin{aligned}
+                            F &amp; : \text{Grados de libertad del mecanismo} \\ 
+                            \lambda &amp; : 6 \\
+                            n &amp; : 3 \text{ vinculos } * k \text{ miembros } + 2 \text{ vinculos base } = 3k + 2 \\
+                            j &amp; : 4k (j_1= 3k \text{ articulaciones 1gdl; } j_3= k \text{ articulaciones 3gdl }) \\
+                            f_i &amp; : 1 \text{ para } j_1 \text{ y } 3 \text{ para } j_3 
                             \end{aligned} \]
                         </p>
                     </div>
