--- a/index.html
+++ b/index.html
@@ -557,6 +557,55 @@
                 </section>
                 <section data-background="images/fiuba-blanco.png" data-background-size="200px" data-background-position="95% 5%">
                     <h3>Mecánica</h3>
+                    <h4>Patas</h4>
+                    <p class="fragment fade-in-then-out" style="position:absolute; margin-left: auto; margin-right: auto; left: 0; right: 0;" data-fragment-index="1">
+                        <img src="images/mec_pata_completa_v1.png" width="43%" height="43%" style="background:none; border:none; box-shadow:none;">
+                    </p>
+                    <p class="fragment fade-in-then-out" style="position:absolute; margin-left: auto; margin-right: auto; left: 0; right: 0;" data-fragment-index="2">
+                        <img src="images/mec_pata_completa_v2.png" width="35%" height="35%" style="background:none; border:none; box-shadow:none;">
+                    </p>
+                    <p class="fragment fade-in-then-out" style="position:absolute; margin-left: auto; margin-right: auto; left: 0; right: 0;" data-fragment-index="3">
+                        <img src="images/mec_pata_completa_v3.png" width="33%" height="33%" style="background:none; border:none; box-shadow:none;">
+                    </p>
+                    <p class="fragment fade-in-then-out" style="position:absolute; margin-left: auto; margin-right: auto; left: 0; right: 0;" data-fragment-index="4">
+                        <img src="images/mec_pata_completa_v4.png" width="33%" height="33%" style="background:none; border:none; box-shadow:none;">
+                    </p>
+                    <aside class="notes">
+                        <p>
+                        </p>
+                    </aside>
+                </section>
+                <section data-background="images/fiuba-blanco.png" data-background-size="200px" data-background-position="95% 5%">
+                    <h3>Mecánica</h3>
+                    <h4>Cuerpo</h4>
+                    <p class="fragment fade-in-then-out" style="position:absolute; margin-left: auto; margin-right: auto; left: 0; right: 0;" data-fragment-index="1">
+                        <img src="images/mec_cuerpo_capas.png" width="50%" height="50%" style="background:none; border:none; box-shadow:none;">
+                    </p>
+                    <p class="fragment fade-in-then-out" style="position:absolute; margin-left: auto; margin-right: auto; left: 0; right: 0;" data-fragment-index="2">
+                        <img src="images/mec_completo_patav4_1.png" width="50%" height="50%" style="background:none; border:none; box-shadow:none;">
+                    </p>
+                    <aside class="notes">
+                        <p>
+                        </p>
+                    </aside>
+                </section>
+                <section data-background="images/fiuba-blanco.png" data-background-size="200px" data-background-position="95% 5%">
+                    <h3>Mecánica</h3>
+                    <p class="fragment fade-in-then-out" style="position:absolute; margin-left: auto; margin-right: auto; left: 0; right: 0;" data-fragment-index="1">
+                        <img src="images/mec_pata_1.png" width="30%" height="30%">
+                    </p>
+                    <p class="fragment fade-in-then-out" style="position:absolute; margin-left: auto; margin-right: auto; left: 0; right: 0;" data-fragment-index="2">
+                        <img src="images/mec_pata_4.png" width="50%" height="50%">
+                    </p>
+                    <p class="fragment fade-in-then-out" style="position:absolute; margin-left: auto; margin-right: auto; left: 0; right: 0;" data-fragment-index="3">
+                        <img src="images/mec_completo_4.png" width="70%" height="70%">
+                    </p>
+                    <p class="fragment fade-in-then-out" style="position:absolute; margin-left: auto; margin-right: auto; left: 0; right: 0;" data-fragment-index="4">
+                        <img src="images/mec_cuerpo_5.png" width="70%" height="70%">
+                    </p>
+                    <p class="fragment fade-in-then-out" style="position:absolute; margin-left: auto; margin-right: auto; left: 0; right: 0;" data-fragment-index="5">
+                        <img src="images/mec_completo_3.png" width="70%" height="70%">
+                    </p>
                     <aside class="notes">
                         <p>
                         </p>
@@ -564,6 +613,48 @@
                 </section>
                 <section data-background="images/fiuba-blanco.png" data-background-size="200px" data-background-position="95% 5%">
                     <h3>Plataforma electrónica</h3>
+                    <p class="fragment fade-in-then-out" style="position:absolute; margin-left: auto; margin-right: auto; left: 0; right: 0;" data-fragment-index="1">
+                        <img src="images/elecgtronicas_0.png" width="70%" height="70%" style="background:none; border:none; box-shadow:none;">
+                    </p>
+                    <p class="fragment fade-in-then-out" style="position:absolute; margin-left: auto; margin-right: auto; left: 0; right: 0;" data-fragment-index="2">
+                        <img src="images/elecgtronicas_1.png" width="70%" height="70%" style="background:none; border:none; box-shadow:none;">
+                    </p>
+                    <p class="fragment fade-in-then-out" style="position:absolute; margin-left: auto; margin-right: auto; left: 0; right: 0;" data-fragment-index="3">
+                        <img src="images/elecgtronicas_2.png" width="70%" height="70%" style="background:none; border:none; box-shadow:none;">
+                    </p>
+                    <p class="fragment fade-in-then-out" style="position:absolute; margin-left: auto; margin-right: auto; left: 0; right: 0;" data-fragment-index="4">
+                        <img src="images/elecgtronicas_3.png" width="70%" height="70%" style="background:none; border:none; box-shadow:none;">
+                    </p>
+                    <p class="fragment fade-in-then-out" style="position:absolute; margin-left: auto; margin-right: auto; left: 0; right: 0;" data-fragment-index="5">
+                        <img src="images/elecgtronicas_4.png" width="70%" height="70%" style="background:none; border:none; box-shadow:none;">
+                    </p>
+                    <aside class="notes">
+                        <p>
+                        </p>
+                    </aside>
+                </section>
+                <section data-background="images/fiuba-blanco.png" data-background-size="200px" data-background-position="95% 5%">
+                    <h3>Plataforma electrónica</h3>
+                    <h4>Controlador principal</h4>
+                    <img src="images/electronica_controlador_principal.png" width="70%" height="70%" style="background:none; border:none; box-shadow:none;">
+                    <aside class="notes">
+                        <p>
+                        </p>
+                    </aside>
+                </section>
+                <section data-background="images/fiuba-blanco.png" data-background-size="200px" data-background-position="95% 5%">
+                    <h3>Plataforma electrónica</h3>
+                    <h4>Controlador pata</h4>
+                    <img src="images/electronica_controlador_pata.png" width="70%" height="70%" style="background:none; border:none; box-shadow:none;">
+                    <aside class="notes">
+                        <p>
+                        </p>
+                    </aside>
+                </section>
+                <section data-background="images/fiuba-blanco.png" data-background-size="200px" data-background-position="95% 5%">
+                    <h3>Plataforma electrónica</h3>
+                    <h4>Sistema de potencia</h4>
+                    <img src="images/electronica_potencia.png" width="70%" height="70%" style="background:none; border:none; box-shadow:none;">
                     <aside class="notes">
                         <p>
                         </p>
@@ -571,6 +662,7 @@
                 </section>
                 <section data-background="images/fiuba-blanco.png" data-background-size="200px" data-background-position="95% 5%">
                     <h3>Sistema de control</h3>
+                    <img src="images/sistema_de_control.png" width="45%" height="45%" style="background:none; border:none; box-shadow:none;">
                     <aside class="notes">
                         <p>
                         </p>
@@ -578,13 +670,41 @@
                 </section>
                 <section data-background="images/fiuba-blanco.png" data-background-size="200px" data-background-position="95% 5%">
                     <h3>Visualizador</h3>
+                    <p class="fragment fade-in-then-out" style="position:absolute; margin-left: auto; margin-right: auto; left: 0; right: 0;" data-fragment-index="1">
+                        <img src="images/forward_wave_10_move_sec_0001.jpg" width="75%" height="75%">
+                    </p>
+                    <p class="fragment fade-in-then-out" style="position:absolute; margin-left: auto; margin-right: auto; left: 0; right: 0;" data-fragment-index="2">
+                        <img src="images/forward_wave_10_move_body.png" width="75%" height="75%">
+                    </p>
+                    <p class="fragment fade-in-then-out" style="position:absolute; margin-left: auto; margin-right: auto; left: 0; right: 0;" data-fragment-index="3">
+                        <img src="images/forward_wave_10_move_legs_angles.png" width="75%" height="75%">
+                    </p>
                     <aside class="notes">
                         <p>
                         </p>
                     </aside>
                 </section>
                 <section data-background="images/fiuba-blanco.png" data-background-size="200px" data-background-position="95% 5%">
-                    <h3>Sistema embebido</h3>
+                    <h3>Resultados</h3>
+                    <h4>VIDEOS y CURVAS</h4>
+                    <aside class="notes">
+                        <p>
+                        </p>
+                    </aside>
+                </section>
+                <section data-background="images/fiuba-blanco.png" data-background-size="200px" data-background-position="95% 5%">
+                    <h3>Conclusiones</h3>
+                    <li> Se mostraron los pasos necesarios para generar un movimiento </li> 
+                    <li> Se detalló la matemática necesaria para conseguir los angulos </li> 
+                    <li> Se desarrollo un software para probar los algoritmos visualizandolos y comparandolos</li>
+                    <li> Se utilizo el mismo sofware para probar los algorimos en maquinas caminantes</li>
+                    <aside class="notes">
+                        <p>
+                        </p>
+                    </aside>
+                </section>
+                <section data-background="images/fiuba-blanco.png" data-background-size="200px" data-background-position="95% 5%">
+                    <h3>Preguntas?</h3>
                     <aside class="notes">
                         <p>
                         </p>
@@ -604,6 +724,7 @@
                 controlsLayout: 'bottom-right',
                 controlsBackArrows: 'faded',
                 progress: true,
+                slideNumber: true,
                 math: {
                     // mathjax: 'https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.0/MathJax.js',
                     config: 'TeX-AMS_HTML-full',
