Agrego la historia del trabajo

--- a/index.html
+++ b/index.html
@@ -79,6 +79,23 @@
                     </aside>
                 </section>
                 <section data-background="images/fiuba-blanco.png" data-background-size="200px" data-background-position="95% 5%" data-transition="slide-in fade-out">
+                    <h2>Historia</h2>
+                    <aside class="notes">
+                        <p>
+                        </p>
+                    </aside>
+                </section>
+                <section data-background="images/fiuba-blanco.png" data-background-size="200px" data-background-position="95% 5%" data-transition="slide-in fade-out">
+                    <h3>Historia</h3>
+                    <p>
+                        <img src="images/historia_0.png" width="70%" height="70%" style="background:none; border:none; box-shadow:none;">
+                    </p>
+                    <aside class="notes">
+                        <p>
+                        </p>
+                    </aside>
+                </section>
+                <section data-background="images/fiuba-blanco.png" data-background-size="200px" data-background-position="95% 5%" data-transition="slide-in fade-out">
                     <h2>Presentacion del estudio</h2>
                     <aside class="notes">
                         <p>
