--- a/index.html
+++ b/index.html
@@ -199,6 +199,12 @@
                     <div class="fragment fade-in-then-out" style="position:absolute; margin-left: auto; margin-right: auto; left: 0; right: 0;" data-fragment-index="2">
                         <h4>Wave gait - Diagrama de Gait</h4>
                         <p>
+                            <img src="images/gaitsreferenciastiempo.png" width="30%" height="30%" style="background:none; border:none; box-shadow:none;">
+                        </p>
+                    </div>
+                    <div class="fragment fade-in-then-out" style="position:absolute; margin-left: auto; margin-right: auto; left: 0; right: 0;" data-fragment-index="3">
+                        <h4>Wave gait - Diagrama de Gait</h4>
+                        <p>
                             <img src="images/diagramawavegait.png" width="50%" height="50%" style="background:none; border:none; box-shadow:none;">
                         </p>
                     </div>
@@ -291,7 +297,7 @@
                         </p>
                     </div>
                     <div class="fragment fade-in-then-out" style="position:absolute; margin-left: auto; margin-right: auto; left: 0; right: 0;" data-fragment-index="8">
-                        <h4>K miembros con dos grados de libertad</h4>
+                        <h4>K miembros con tres grados de libertad</h4>
                         <p>
                             \[\begin{aligned}
                             F &amp; = 6(3k + 2 - 4k - 1) + \sum^{3k}_{i=1}1 + \sum^{k}_{i=1}3 = 6
@@ -336,11 +342,14 @@
                             \end{aligned} \]
                         </p>
                     </div>
-                    <div class="fragment fade-in" style="position:absolute; margin-left: auto; margin-right: auto; left: 0; right: 0;" data-fragment-index="6">
-                        <h4>Margen de estabilidad</h4>
-                        <p class="fragment fade-in-then-out" style="position:absolute; margin-left: auto; margin-right: auto; left: 0; right: 0;" data-fragment-index="7">
+                    <div class="fragment fade-in-then-out" style="position:absolute; margin-left: auto; margin-right: auto; left: 0; right: 0;" data-fragment-index="6">
+                        <h4>Patron de soporte</h4>
+                        <p>
                             <img src="images/estabilidad_margen_0.png" width="50%" height="50%" style="background:none; border:none; box-shadow:none;">
                         </p>
+                    </div>
+                    <div class="fragment fade-in" style="position:absolute; margin-left: auto; margin-right: auto; left: 0; right: 0;" data-fragment-index="7">
+                        <h4>Margen de estabilidad</h4>
                         <p class="fragment fade-in-then-out" style="position:absolute; margin-left: auto; margin-right: auto; left: 0; right: 0;" data-fragment-index="8">
                             <img src="images/estabilidad_margen_1.png" width="50%" height="50%" style="background:none; border:none; box-shadow:none;">
                         </p>
@@ -678,7 +687,7 @@
                     </aside>
                 </section>
                 <section data-background="images/fiuba-blanco.png" data-background-size="200px" data-background-position="95% 5%">
-                    <h3>Sistema de control</h3>
+                    <h3>Sistema de control distribuido</h3>
                     <img src="images/sistema_de_control.png" width="45%" height="45%" style="background:none; border:none; box-shadow:none;">
                     <aside class="notes">
                         <p>
@@ -686,15 +695,16 @@
                     </aside>
                 </section>
                 <section data-background="images/fiuba-blanco.png" data-background-size="200px" data-background-position="95% 5%">
-                    <h3>Visualizador</h3>
+                    <h3>Sistema de control distribuido</h3>
+                    <h4>Escenarios</h4>
                     <p class="fragment fade-in-then-out" style="position:absolute; margin-left: auto; margin-right: auto; left: 0; right: 0;" data-fragment-index="1">
-                        <img src="images/forward_wave_10_move_sec_0001.jpg" width="75%" height="75%">
+                        <img src="images/software_escenario_1.png" width="75%" height="75%" style="background:none; border:none; box-shadow:none;">
                     </p>
                     <p class="fragment fade-in-then-out" style="position:absolute; margin-left: auto; margin-right: auto; left: 0; right: 0;" data-fragment-index="2">
-                        <img src="images/forward_wave_10_move_body.png" width="75%" height="75%">
+                        <img src="images/software_escenario_2.png" width="65%" height="65%" style="background:none; border:none; box-shadow:none;">
                     </p>
                     <p class="fragment fade-in-then-out" style="position:absolute; margin-left: auto; margin-right: auto; left: 0; right: 0;" data-fragment-index="3">
-                        <img src="images/forward_wave_10_move_legs_angles.png" width="75%" height="75%">
+                        <img src="images/software_escenario_3.png" width="65%" height="65%" style="background:none; border:none; box-shadow:none;">
                     </p>
                     <aside class="notes">
                         <p>
