--- a/index.html
+++ b/index.html
@@ -737,6 +737,13 @@
                         </p>
                     </aside>
                 </section>
+                <section data-background="images/fiuba-blanco.png" data-background-size="200px" data-background-position="95% 5%">
+                    <h3>Muchas gracias/h3>
+                    <aside class="notes">
+                        <p>
+                        </p>
+                    </aside>
+                </section>
             </div>
         </div>
 
